--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,3 +68,35 @@ svg {
   max-width: 100%;
   width: auto;
 }
+
+/* MOBILE **/
+@media (max-width: 768px) {
+  h1 {
+    font-size: 43px;
+    font-weight: 500;
+  }
+
+  h2 {
+    font-size: 36px;
+    font-weight: 500;
+  }
+
+  h3 {
+    font-size: 26px;
+    font-weight: 500;
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  a {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
