--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
   color: var(--black);
   background: var(--white);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 span,
